--- a/NotePad/Views/UserControl3.axaml
+++ b/NotePad/Views/UserControl3.axaml
@@ -4,12 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
 			 xmlns:vm="using:NotePad.ViewModels"
-             x:Class="NotePad.Views.UserControl1">
+             x:Class="NotePad.Views.UserControl3">
 
 	
 		<DockPanel>
 			<Button DockPanel.Dock="Top" Command="{Binding $parent[Window].DataContext.GoTop}">../</Button>
-			<Button DockPanel.Dock="Top" Command="{Binding $parent[Window].DataContext.ReadFromFile}">
+			<Button DockPanel.Dock="Top" Command="{Binding $parent[Window].DataContext.WriteToFile}">
 				Save
 			</Button>
 			<Button DockPanel.Dock="Top" Command="{Binding $parent[Window].DataContext.GoDown}">
